benchmark/scenarios/networking/networkpolicy-cross-namespace/manifests/networkpolicy-allow-all-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-clients
  namespace: server-ns
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              role: trusted
      ports:
        - protocol: TCP
          port: 80
